# libbg3

./: .gitignore  CMakeLists.txt  README.md  build.sh  libbg3.c  libbg3.h
docs/: bitknit2.txt
examples/: bg3_find.c  bg3_index.c  bitknit.c  granny.c  index.c  lspk.c  osiris.c  pybg3.cc
